Fixed bug Background overlap Homepage

--- a/my-portfolio/app/globals.css
+++ b/my-portfolio/app/globals.css
@@ -69,3 +69,8 @@ body {
 .toggler-icon {
   color: #fafafa;
 }
+
+#homepage {
+  position: fixed;
+  z-index: 1;
+}
